--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input[type="text"]{
+    @apply rounded-md p-2;
+};
+
+select {
+    @apply rounded-md p-2;
+}
