--- a/src/commons/styles/estilosLayout.css
+++ b/src/commons/styles/estilosLayout.css
@@ -1,5 +1,5 @@
 .containerMy {
-  display: grid;
+/*   display: grid;
   height: 100vh;
   min-height: 100vh;
   max-height: 100vh;
@@ -7,9 +7,7 @@
   max-width: 100vw;
   min-width: 100vw;
   background-color: #353535;
-  
-  background-color: #353535;
-  color: #fff;
+  color: #fff; */
   
   grid-template-rows: auto 1fr;
   grid-template-areas:
@@ -20,7 +18,7 @@
 
 .navbarMy {
   grid-area: navbarMy;
-  grid-column: 2;
+/*   grid-column: 2;
   background-color: #232323;
   color: #fff;
   padding: 0.5rem 1rem;
@@ -31,19 +29,20 @@
   align-items: center;
   height: 6vh;
   max-height: 6vh;
-  width: 95.5vw;
-  max-width: 95.5vw;
+  width: 96vw;
+  max-width: 96vw;
 
   box-sizing: border-box;
-  border-bottom: 1px solid #F16136;
+  border-bottom: 1px solid #F16136; */
 }
 .sidebarMy {
   grid-area: sidebarMy;
-  max-height: 100vh;
+  /* max-height: 100vh; */
 }
+
 .contentMy {
   grid-area: contentMy;
-  background-color: #353535;
+/*   background-color: #353535;
   color: #fff;
   padding: 1rem;
   flex: 1 1 auto;
@@ -51,8 +50,8 @@
   flex-direction: column;
   max-width: 100%;                   
   max-height: 94vh;
-  width: 95.5vw;
-  max-width: 95.5vw;
+  width: 96vw;
+  max-width: 96vw; */
 }
 .contenedor-Container{
   display: flex;
@@ -73,16 +72,16 @@
 }
 
 .navbarTitle{
-  font-size: 4vh;
+/*   font-size: 4vh;
   line-height: 4vh;
   font-weight: bold;
   padding: 0;
   text-align: start;
-  margin: 0;
+  margin: 0; */
 }
 .navbarUserImg{
-  height: 100%;
-  max-height: 100%;
+/*   height: 100%;
+  max-height: 100%; */
 }
 .moduleTitle{
   text-align: start;
